--- a/Application/Home/View/Person/index.html
+++ b/Application/Home/View/Person/index.html
@@ -62,10 +62,18 @@
 <dl>
 	<dt>
 	<span class="titile"><span class="style_rcfu01">企业招聘</span><span class="style_rcfu02">感言</span><span class="style_rcfu03">关于传智播客，请听企业是怎么说的？</span></span></dt>
+
+<?php foreach($info as $key=>$val){ ?>
 	<dd class="gzsp_style01 rcdj_style01">
-		<a href="http://www.itcast.cn/news/20131030/1622464642.shtml" target="_blank"><img height="132" src="http://www.itcast.cn/files/image/201310/20131030164607964.jpg" width="198" /></a>
-		<p class="style_rcfu04"><a href="http://www.itcast.cn/news/20131030/1622464642.shtml" target="_blank">北京惠泽智信科技招聘软件工程师</a></p>
+		<a href="http://www.itcast.cn/news/20131030/1622464642.shtml" target="_blank">
+		<!-- <img height="132" src="http://www.itcast.cn/files/image/201310/20131030164607964.jpg" width="198" /> -->
+		<img height="132" src="/Public/images/<?php echo $val['s_img'];?>" width="198" />
+		
+		</a>
+		<p class="style_rcfu04"><a href="http://www.itcast.cn/news/20131030/1622464642.shtml" target="_blank"><?php echo $val['s_name'];?></a></p>
 	</dd>
+<?php }?>
+
 </dl>
 
 </div>
@@ -73,16 +81,17 @@
 <div class="rcfu_yrpj"><h5 class="style_rcfu05" >用人企业评价</h5>
         <div class="yrpj_main">
 <dl>
+<?php foreach($info1 as $key=>$val){ ?>
 	<dd>
 		<ul class="style_rcfu10">
-		<li class="style_rcfu06"><img height="167" src="/Public/images/pic02.jpg" width="151" /></li>
+		<li class="style_rcfu06"><img height="167" src="/Public/images/<?php echo $val['e_img'];?>" width="151" /></li>
 		<li class="style_rcfu07">
-		<p class="style_rcfu08">IBM高级软件开发工程师刘冬阳</p>
-		<p class="style_rcfu09">自工作中接触传智播客毕业学员以来，感觉他们Java基础知识扎实，在面试中基本上能对Java相关问题有较高水平的应答。并且普遍对java项目整个开发流程较为熟悉，尤其对java开发平台以及框架原理有较为深入的理解和较强的动手能力，能独立开发出较高水平的JavaEE应用。在工作过程中有很强的学习、钻研、吃苦耐劳的精神。</p>
+		<p class="style_rcfu08"><?php echo $val['e_name']?></p>
+		<p class="style_rcfu09"><?php echo $val['e_desc']?></p>
 		</li>
 		</ul>
 	</dd>
-	
+<?php }?>
 </dl>
 
         </div>
@@ -99,11 +108,12 @@
 <dl>
 	<dt>
 		<span class="titile"><span class="style_rcfu01">传智播客与企业</span><span class="style_rcfu02">人才对接会现场</span></span></dt>
+	<?php foreach($info2 as $k=>$v){ ?>
 	<dd class="gzsp_style">
-		<a href="http://www.itcast.cn/files/image/201310/20131031132653077.jpg" target="_blank"><img height="132" src="http://www.itcast.cn/files/image/201310/20131031132653077.jpg" width="198" /></a>
-		<p class="style_rcfu04">招聘会现场人才济济</p>
+		<a href="http://www.itcast.cn/files/image/201310/20131031132653077.jpg" target="_blank"><img height="132"src="/Public/images/<?php echo $v['d_img'];?>" width="198" /></a>
+		<p class="style_rcfu04"><?php echo $v['d_name'];?></p>
 	</dd>
-	
+	<?php }?>
 </dl>
 
  </div><br />
@@ -112,15 +122,13 @@
 <div class="rcfu_yrpj" style="height:240px;height:260px !important;"><h5 class="style_rcfu05" >下面是到传智播客招聘人才的部分企业 (到传智播客招聘人才的企业达到300多家)</h5>
     <div class="zpqy_list">
 <dl>
+<?php foreach($info3 as $k=>$v){ ?>
 	<dd>
 		<ul>
-		<li>北京朝歌数码科技有限公司</li>
-		<li>捷成股份（创业板上市公司）</li>
-		<li>武汉佰钧成技术有限责任公司</li>
-		<li>上海恺英网络有限公司</li>
-		<li>北京金吉列出入境管理公司</li>
+		<li><?php echo $v[c_name];?></li>
 		</ul>
 	</dd>
+<?php }?>
 </dl>
     </div>
 </div>
@@ -227,47 +235,55 @@
 </div>
 <!--学员实力-->
 
-<!--我要到传智招聘-->
-<form name="job">
-<div class="zpgy">
-	<div class="rcfu_bg01"><img src="/Public/images/top.gif" width="973" height="17" /></div>
-<div class="dczp_style">
-    	<dl>
-    	  <dt><span class="titile"><span class="style_rcfu01">我要到传智</span><span class="style_rcfu02">招聘</span></span></dt>
-          <dd>
-          	<div class="dzzp_style01"><img src="/Public/images/zpbg_top.gif" width="891" height="25" /></div>
-            <div class="dzzp_style02">
-            <dl>
-            	<dd>公司名称：<input name="company" type="text" size="45" maxlength="50"/>　　
-				网　　址：<input name="site" type="text" size="55" maxlength="50" value="http://"/></dd>
-                <dd>地　　址：<input name="address" type="text" size="55" maxlength="50"/>　　
-				公司电话：<input name="tel" type="text" size="25" maxlength="30"  /></dd>
-                <dd>联 系 人：<input name="contact" type="text" size="16" maxlength="20"  />
-				  　　QQ：<input name="contactqq" type="text" size="20" maxlength="20"  />
-				  　　手 机：<input name="contactmobile" type="text" size="20" maxlength="11"  />
 
-               </dd>
-              <dd style="clear:both;">邮 　 箱：<input name="contactemail" type="text" size="40" maxlength="40"/></dd>
-                <dd>公司简介：<textarea name="note" cols="89" rows="6" class="bd_gsjs" ></textarea></dd>
-                <dd>招聘信息：<textarea name="content" cols="89" rows="8" class="bd_gsjs"></textarea></dd>      
-           </dl>  
-           <div class="yzm_tjk" >
-               <ul>
-                <li class="bd_gsjs02">请输入验证码：
-                  <input name="validatecode" type="text" size="16" maxlength="10"/>　<img src="http://manage.itcast.cn:8080/validatecode/job.jpg" id="kaptchaImage" width="100"/></li>
-                <li><input type="button" id="savebutton"/> </li>
-               </ul>
-           </div>    
-            <div class="clear"></div>  
-            </div> 
-            <div class="dzzp_style01"><img src="/Public/images/zpbg_bottom.gif" width="891" height="7" /></div>      
-          </dd>
-    	</dl>
+
+<!--我要到传智招聘-->
+<form name="job" method="post" action="addpro">
+<div class="zpgy">
+<div class="rcfu_bg01"><img src="/Public/images/top.gif" width="973" height="17" /></div>
+<div class="dczp_style">
+	<dl>
+		<dt><span class="titile"><span class="style_rcfu01">我要到传智</span><span class="style_rcfu02">招聘</span></span></dt>
+		<dd>
+			<div class="dzzp_style01"><img src="/Public/images/zpbg_top.gif" width="891" height="25" /></div>
+			<div class="dzzp_style02">
+		<dl>
+			<dd>
+				公司名称：<input name="company" type="text" size="45" maxlength="50"/>　　
+				网　　址：<input name="site" type="text" size="55" maxlength="50" value="http://"/></dd>
+			<dd>
+				地　　址：<input name="address" type="text" size="55" maxlength="50"/>　　
+				公司电话：<input name="tel" type="text" size="25" maxlength="30"  /></dd>
+			<dd>
+				联 系 人：<input name="contact" type="text" size="16" maxlength="20"  />
+			　　QQ：<input name="contactqq" type="text" size="20" maxlength="20"  />
+			　　手 机：<input name="contactmobile" type="text" size="20" maxlength="11"  />
+			</dd>
+			<dd style="clear:both;">邮 　 箱：<input name="contactemail" type="text" size="40" maxlength="40"/></dd>
+			<dd>公司简介：<textarea name="note" cols="89" rows="6" class="bd_gsjs" ></textarea></dd>
+			<dd>招聘信息：<textarea name="content" cols="89" rows="8" class="bd_gsjs"></textarea></dd>
+		</dl>  
+		<div class="yzm_tjk" >
+		<ul>
+			<li class="bd_gsjs02">请输入验证码：
+				<input name="verify" type="text" size="16" maxlength="10"/>　
+				<img src="verify" width="150" height='50' id="atm" onclick="this.src='verify?count=Math.rand()'" name='verify'/></li>
+			<li><input type="submit" value="添加"></li>
+		</ul>
+		</div>    
+		<div class="clear"></div>  
+		</div> 
+		<div class="dzzp_style01"><img src="/Public/images/zpbg_bottom.gif" width="891" height="7" /></div> 
+		</dd>
+	</dl>
  </div><div class="rcfu_bg02"><img src="/Public/images/bottom.gif" width="973" height="15" /></div>
 </div>
 <div id="dialog" title="信息保存结果"></div><!-- 对话框内容 -->
 <!--我要到传智招聘 -->
 </form>
+
+
+
 </div>
 <div class="clear"></div>
 <!-- 页面底部 -->
@@ -300,7 +316,6 @@
 		});
 	});
 </script>
-
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F616f7dbc9d62017d85a273460d618961' type='text/javascript'%3E%3C/script%3E"));
