--- a/Application/Admin/View/Admin/index.html
+++ b/Application/Admin/View/Admin/index.html
@@ -7,23 +7,26 @@
   <link href="/files/bui-min.css" rel="stylesheet" type="text/css">
    <link href="/files/main-min.css" rel="stylesheet" type="text/css">
  <script charset="utf-8" async="" src="/files/main.js"></script></head>
+  <script charset="utf-8" async="" src="/files/jq.js"></script></head>
  <body>
 
   <div class="header">
     
       <div class="dl-title">
-       <!--<img src="/chinapost/Public/assets/img/top.png">-->
-      </div>
+			<!--<input type="image" src="{$a}" >-->
+			{$a}
 
-    <div class="dl-log">欢迎您，<span class="dl-log-user">root</span><a href="http://www.baidu.com" title="退出系统" class="dl-log-quit">[退出]</a>
+      </div>
+	
+    <div class="dl-log"><div id="linkweb"></div>欢迎您，<span class="dl-log-user"><font color='red'>{$user}</font></span><a href="#" onclick="tui()" title="退出系统" class="dl-log-quit">[退出]</a>
     </div>
+	<!-- http://www.jiuyue.com/admin/admin/sess  -->
   </div>
    <div class="content">
     <div class="dl-main-nav">
       <div class="dl-inform"><div class="dl-inform-title"><s class="dl-inform-icon dl-up"></s></div></div>
       <ul id="J_Nav" class="nav-list ks-clear">
-        		<li class="nav-item dl-selected"><div class="nav-item-inner nav-home">系统管理</div><div class="nav-item-mask"></div></li>		<li class="nav-item"><div class="nav-item-inner nav-order">业务管理</div><div class="nav-item-mask"></div></li>       
-
+        		<li class="nav-item dl-selected"><div class="nav-item-inner nav-home">前台管理</div><div class="nav-item-mask"></div></li>		<li class="nav-item"><div class="nav-item-inner nav-order">业务管理</div><div class="nav-item-mask"></div></li>
       </ul>
     </div>
     <ul id="J_NavContent" class="dl-tab-conten">
@@ -32,7 +35,7 @@
 	<div class="dl-second-tree" id="J_1Tree"><ul class="bui-side-menu bui-menu" aria-disabled="false" style="height: 592px;" aria-pressed="false">
 		<li class="bui-menu-item menu-second" aria-disabled="false" data-id="menu-item1" aria-pressed="false">
 	<div class="bui-menu-title"><s></s>
-	<span class="bui-menu-title-text">系统管理</span></div>
+	<span class="bui-menu-title-text">用户管理</span></div>
 	<ul class="bui-menu" aria-disabled="false" aria-pressed="false">
 	
 	<li class="bui-menu-item menu-leaf" aria-disabled="false" data-id="12" aria-pressed="false"><a href="./index(2).html"><em>机构管理</em></a></li>
@@ -99,7 +102,6 @@
 	
 	
 	<span class="tab-item-title">查询业务</span><s class="tab-item-close"></s></li></ul></div></div><s class="tab-nav-arrow arrow-right"></s>
-	
 	</div>
 	
 	<div class="tab-content-container" style="height: 571px;"><div class="tab-content" style=""><iframe src="http://www.baidu.com" width="100%" height="100%" frameborder="0"></iframe></div></div></div></div></li></ul>
@@ -110,11 +112,16 @@
   <script type="text/javascript" src="/files/config-min.js"></script>
   <script>
     BUI.use('common/main',function(){
-      var config = [{id:'1',menu:[{text:'系统管理',items:[{id:'12',text:'机构管理',href:'http://www.baidu.com'},{id:'3',text:'角色管理',href:'Role/index.html'},{id:'4',text:'用户管理',href:'User/index.html'},{id:'6',text:'菜单管理',href:'Menu/index.html'}]}]},{id:'7',homePage : '9',menu:[{text:'业务管理',items:[{id:'9',text:'查询业务',href:'Node/index.html'}]}]}];
+      var config = [{id:'1',menu:[{text:'前台管理',items:[{id:'12',text:'用户列表',href:'/admin/admin/user'},{id:'3',text:'添加用户',href:'/admin/admin/adduser'},{id:'11',text:'学院信息',href:'/admin/admin/stu_article'},{id:'6',text:'菜单管理',href:'/admin/admin/menu'},{id:'6',text:'开班信息',href:'/admin/admin/classs'},{id:'6',text:'PHP培训课程',href:'Menu/index.html'},{id:'6',text:'学院消息',href:'Menu/index.html'},{id:'6',text:'校园动态',href:'Menu/index.html'},{id:'6',text:'论坛热帖',href:'Menu/index.html'}]}]},{id:'7',homePage : '9',menu:[{text:'业务管理',items:[{id:'9',text:'查询业务',href:'Node/index.html'}]}]}];
       new PageUtil.MainPage({
         modulesConfig : config
-      });
     });
+    });
+	setInterval("linkweb.innerHTML=new Date().toLocaleString()+' 星期'+'日一二三四五六'.charAt(new Date().getDay());",1000);
+	function tui(){
+		if(confirm('确定退出?')){
+			location="http://www.bbs.com/admin/admin/sess";
+		}
+	}
   </script>
- 
 </body></html>
