--- a/files/style.css
+++ b/files/style.css
@@ -1,86 +1,66 @@
-@charset "utf-8";
-body{
-    font-size: 13px;
+html {
+	background: url('purty_wood.png');
+	font-size: 10pt;
 }
-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
-    padding: 1px;
+.loginform label {
+	display: block;
+	color: #999;
 }
-
-select {
-    height: 24px;
-}
-
-.radio{
-    font-size: 11px;
-    margin-bottom: 4px;
+.cf:before,
+.cf:after {
+    content: ""; 
+    display: table;
 }
 
-.nav{
-    margin-bottom: 5px;
+.cf:after {
+    clear: both;
 }
-
-form{
-    margin: 0 0 5px;
+.cf {
+    *zoom: 1;
 }
-
-.page{
-    text-align: right;margin-right:25px;margin-top:5px;
+:focus {
+	outline: 0;
 }
-
-.page a{
-    margin-left: 5px;
+.loginform {
+	width: 410px;
+	margin: 50px auto;
+	padding: 25px;
+	background-color: rgba(250,250,250,0.5);
+	border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
 }
-
-.page .current{
-    margin-left: 5px;
-    color: red;
+.loginform ul {
+	padding: 0;
+	margin: 0;
 }
-
-.table td input[type="checkbox"]{
-    padding: 0;
-    margin: 0;
+.loginform li {
+	display: inline;
+	float: left;
 }
-
-.table th input[type="checkbox"]{
-    padding: 0;
-    margin: 0;
+.loginform input:not([type=submit]) {
+	padding: 5px;
+	margin-right: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 3px;
+	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
+				0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
 }
-
-.table td, .table th{
-    padding-top: 8px;
-    padding-bottom: 4px;
-	line-height:20ppx;
-	
+.loginform input[type=submit] {
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	background: #64c8ef; /* Old browsers */
+	background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+	padding: 5px 15px;
+	margin-right: 0;
+	margin-top: 15px;
+	border-radius: 3px;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
 }
-.table th{
-   
-	background-color:#eaeaea;
-}
-
-.definewidth{
-	width:96%;
-	margin:auto;		
-}
-.m10{
-	margin-top:10px;
-}
-.m20{
-	padding-top:20px;
-}
-
-.tableleft{
-	text-align:right;
-	padding-left:5px;
-	background-color:#f5f5f5;
-
-}
-
-
-/*formValidator表单验证*/
-.onShow,.onFocus,.onError,.onCorrect,.onLoad,.onTime{display:inline-block;display:-moz-inline-stack;zoom:1;*display:inline; vertical-align:middle;background:url(../Images/msg_bg.png) no-repeat;	color:#444;line-height:18px;padding:2px 10px 2px 23px; margin-left:10px;_margin-left:5px}
-.onShow{background-position:3px -147px;border-color:#40B3FF;color:#959595}
-.onFocus{background-position:3px -147px;border-color:#40B3FF;}
-.onError{background-position:3px -47px;border-color:#40B3FF; color:red}
-.onCorrect{background-position:3px -247px;border-color:#40B3FF;}
-.onLamp{background-position:3px -200px}
-.onTime{background-position:3px -1356px}
